--- a/parlacomedolcestilnovo.ipynb
+++ b/parlacomedolcestilnovo.ipynb
@@ -34,6 +34,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solo se usate COLAB per eseguire questo notebook dovete eseguire questa istruzione\n",
+    "\n",
+    "!wget . \"https://github.com/capitanio/LinguaggioNaturale/blob/main/divina commedia.txt\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
