--- a/parlacomecodicepenale.ipynb
+++ b/parlacomecodicepenale.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "# solo se usate COLAB per eseguire questo notebook dovete eseguire questa istruzione\n",
     "\n",
-    "!wget . \"https://github.com/capitanio/LinguaggioNaturale/blob/main/codice procedura penale.txt\"\n"
+    "!wget \"https://github.com/capitanio/LinguaggioNaturale/blob/main/codice procedura penale.txt\"\n"
    ]
   },
   {
