--- a/parlacomedolcestilnovo.ipynb
+++ b/parlacomedolcestilnovo.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "# solo se usate COLAB per eseguire questo notebook dovete eseguire questa istruzione\n",
     "\n",
-    "!wget . \"https://github.com/capitanio/LinguaggioNaturale/blob/main/divina commedia.txt\"\n"
+    "!wget \"https://github.com/capitanio/LinguaggioNaturale/blob/main/divina commedia.txt\"\n"
    ]
   },
   {
